2007-12-13  Kevin Kubasik <Kevin@Kubasik.net> 

	* Banter.mdp, configure.ac, Banter/StatusEntry.cs,
	  Banter/ConversationManager.cs, Banter/GroupWindow.cs,
	  Banter/ProviderUser.cs, Banter/SerializableDictionary.cs,
	  Banter/Makefile.am: Save status' to the disk so custom status' persist.

2007-11-25  Jordi Mas <jmas@softcatala.org>

	* Banter/Application.cs: Call Catalog.Init to init the catalog and
	  activate the localisation support.
	* Fixes MAINTAINERS 

2007-08-20  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac: bumped version to 0.1.12 for next iteration

2007-08-20  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac: bumped version to 0.1.11 for release
	* NEWS: updated for 0.1.11 release

2007-08-16  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/Account.cs: removed the code to gather an Alias name in
	  OnSubscribedMemberChanged.  the case where a contact in the local
	  pending state is removed, telepathy is temporarily adding and
	  removing the contact from the subscribed list.  in this flow,
	  getting the alias name hangs and never returns back to us.

2007-08-16  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/Account.cs: Added code to update full information in
	  ProviderUser when a contact is moved from local pending to fully
	  authorized

2007-08-15  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/Account.cs: Added code to discover a remote contact's media
	  capability on initial setup.
	
	  Partially added code for media capability callback for when media
	  caps change
	* Banter/ChatWindow.cs: added a try catch around the code thats sets up
	  audio and video channels to catch cases where a user attempts voice
	  video chat with a remote user that doesn't support it
	* Banter/ProviderUser.cs: added privateType for holding media
	  capabilities
	
	  added public Property for exposing media capabilities
	
	  added public Enum for defining media capabilities