@@ -88,7 +88,8 @@ ASSEMBLIES =  \
 	$(GTK_DOTNET_20_LIBS) \
 	$(TELEPATHY_SHARP_LIBS) \
 	$(NOTIFY_SHARP_LIBS) \
-	$(MONO_CAIRO_LIBS) 
+	$(MONO_CAIRO_LIBS) \
+	$(GTKSPELL_SHARP_LIBS)
 
 $(TARGET): $(CSFILES) Defines.cs
 	$(CSC) -out:$@ $(CSFLAGS) $^ $(ASSEMBLIES) $(RESOURCES)
