@@ -49,6 +49,7 @@ PKG_CHECK_MODULES([GTK_DOTNET_20], [gtk-dotnet-2.0])
 PKG_CHECK_MODULES([TELEPATHY_SHARP], [telepathy-sharp])
 PKG_CHECK_MODULES([NOTIFY_SHARP], [notify-sharp])
 PKG_CHECK_MODULES([MONO_CAIRO], [mono-cairo])
+PKG_CHECK_MODULES([GTKSPELL_SHARP], [gtkspell-sharp-2.0])
 #PKG_CHECK_MODULES([EVOLUTION_SHARP], [evolution-sharp])
 #PKG_CHECK_MODULES([WEBKITGLUE], [WebKitGdk])
 #PKG_CHECK_MODULES([GTK2], [gtk+-2.0])
